# claim-dag-audit

./: .gitignore  ADVISORY-BOARD.md  AGENTS.md  CLAUDE.md  DECISIONS.md  Makefile  README.md  STATUS.md  model-policy.yaml  pyproject.toml
claim_dag/: __init__.py  audits.py  cli.py  graph.py  io.py  plan.py  policy.py  promote.py  reconcile.py  report.py  runner.py  schema.py  source.py
docs/: graph-extraction-reconciliation-plan.md  llm-runner.md
examples/mini-paper/: main.tex
examples/mini-paper/audits/claim-dag/2026-07-05/: claims.yaml  edges.yaml  graph.argdown  report.md  source-manifest.yaml
examples/mini-paper/audits/claim-dag/2026-07-05/edge-audits/: E001.claude-haiku.md  E001.gpt.md
examples/mini-paper/audits/claim-dag/2026-07-05/node-audits/: C001.claude-haiku.md  C001.gpt.md  C002.claude-haiku.md  C002.gpt.md
prompts/: adversarial-weakest-edges.md  audit-edge.md  audit-node.md  build-edges.md  extract-claims.md
reviews/review-board-2026-07-05/: codex-betz.md  codex-rushby.md  opus-fidler.md  opus-mayo.md  opus-van-gelder.md  synthesis.md
schemas/: audit.schema.yaml  claims.schema.yaml  edges.schema.yaml
scripts/: reaudit-cron.sh
templates/: audit-plan.md.j2  graph.argdown.j2  report.md.j2
tests/: test_audit.py  test_reconcile.py  test_runner.py
